# fish-length-measuring

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  fish.py  mise.toml  model.pt  notebook.py  pyproject.toml
data/models/: FishYolov7_tiny.pt  FishYolov7_tiny_ultralytics.onnx  fish-yolo26n.pt
data/videos/: 20260318_134804.bag
src/fish_project/: __init__.py  bag_reader.py  detection.py  measurement.py  model.py  notebook.py  paths.py  visualization.py
