[project]
name = "fish-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "torch>=2.10.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "requests>=2.28.0",
    "tqdm>=4.64.0",
    "seaborn>=0.12.0",
    "torchvision>=0.22.0",
    "utils>=1.0.2",
]
