[project]
name = "fish-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "torch>=2.10.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "requests>=2.28.0",
    "tqdm>=4.64.0",
    "seaborn>=0.12.0",
    "torchvision>=0.22.0",
    "utils>=1.0.2",
    "marimo>=0.20.4",
    "anywidget>=0.9.21",
    "ty>=0.0.21",
]

[dependency-groups]
dev = [
    "altair>=6.0.0",
    "duckdb>=1.5.0",
    "mcp>=1",
    "nbformat>=5.10.4",
    "openai>=2.26.0",
    "polars[pyarrow]>=1.38.1",
    "pydantic>=2",
    "pytest>=9.0.2",
    "python-lsp-ruff>=2.3.0",
    "python-lsp-server>=1.14.0",
    "ruff>=0.15.5",
    "sqlglot>=29.0.1",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.9.0.post1",
    "websockets>=16.0",
]
